update status + add acte, subcate

--- a/views/admin/partials/leftside.ejs
+++ b/views/admin/partials/leftside.ejs
@@ -28,7 +28,6 @@
                 <ul class="hidden">
                     <li>
                         <a href="/admin/oveview/1" class="side-menu__link ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Overview 1
                             </div>
@@ -38,7 +37,6 @@
                     </li>
                     <li>
                         <a href="lucent-dashboard-overview-2.html" class="side-menu__link ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Overview 2
                             </div>
@@ -61,7 +59,6 @@
                 <ul class="block">
                     <li>
                         <a href="lucent-products.html" class="side-menu__link side-menu__link--active ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Products
                             </div>
@@ -72,7 +69,6 @@
                     
                     <li>
                         <a href="/admin/orders" class="side-menu__link ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Orders
                             </div>
@@ -82,7 +78,6 @@
                     </li>
                     <li>
                         <a href="/admin/feedbacks" class="side-menu__link ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Feedbacks
                             </div>
@@ -103,7 +98,6 @@
                 <ul class="block">
                     <li>
                         <a href="/admin/admin" class="side-menu__link side-menu__link--active ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 Admin
                             </div>
@@ -114,7 +108,6 @@
                     
                     <li>
                         <a href="/admin/users" class="side-menu__link ">
-                            <i data-tw-merge="" data-lucide="zap" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
                             <div class="side-menu__link__title">
                                 User
                             </div>
@@ -123,6 +116,45 @@
                         <!-- END: Third Child -->
                     </li>
 
+                </ul>
+                <!-- END: Second Child -->
+            </li>
+            <li>
+                <a href="javascript:;" class="side-menu__link side-menu__link--active side-menu__link--active-dropdown">
+                    <i data-tw-merge="" data-lucide="credit-card" class="stroke-[1] w-5 h-5 side-menu__link__icon"></i>
+                    <div class="side-menu__link__title">Products management</div>
+                    <i data-tw-merge="" data-lucide="chevron-down" class="stroke-[1] w-5 h-5 side-menu__link__chevron"></i>
+                </a>
+                <!-- BEGIN: Second Child -->
+                <ul class="block">
+                    <li>
+                        <a href="lucent-products.html" class="side-menu__link side-menu__link--active ">
+                            <div class="side-menu__link__title">
+                                Product categories
+                            </div>
+                        </a>
+                        <!-- BEGIN: Third Child -->
+                        <!-- END: Third Child -->
+                    </li>
+                    
+                    <li>
+                        <a href="/admin/orders" class="side-menu__link ">
+                            <div class="side-menu__link__title">
+                                Product subcategories
+                            </div>
+                        </a>
+                        <!-- BEGIN: Third Child -->
+                        <!-- END: Third Child -->
+                    </li>
+                    <li>
+                        <a href="/admin/feedbacks" class="side-menu__link ">
+                            <div class="side-menu__link__title">
+                                Products
+                            </div>
+                        </a>
+                        <!-- BEGIN: Third Child -->
+                        <!-- END: Third Child -->
+                    </li>
                 </ul>
                 <!-- END: Second Child -->
             </li>
