--- a/views/admin/product_subcategories.ejs
+++ b/views/admin/product_subcategories.ejs
@@ -1,6 +1,4 @@
-<div class="alert-update-user alert alert-primary" role="alert">
-	User status updated successfully!
-</div>
+
 <body>
     <div>
         <div data-tw-backdrop="" aria-hidden="true" tabindex="-1" id="theme-switcher" class="modal group bg-gradient-to-b from-theme-1/50 via-theme-2/50 to-black/50 transition-[visibility,opacity] w-screen h-screen fixed left-0 top-0 [&:not(.show)]:duration-[0s,0.2s] [&:not(.show)]:delay-[0.2s,0s] [&:not(.show)]:invisible [&:not(.show)]:opacity-0 [&.show]:visible [&.show]:opacity-100 [&.show]:duration-[0s,0.4s]">
@@ -468,7 +466,7 @@
                                                     <!-- action="/admin/order/status" method="post" -->
                                                     <input type="hidden" name="orderId" value="<% product_subcategory.id %>">
                                                     <!-- onchange="this.form.submit()" -->
-                                                    <select name="plan" class="user-status-select"  data-user-id="<%= product_subcategory.id %>"   > 
+                                                    <select name="plan" class="status-select"  data-product_subcategories="<%= product_subcategory.id %>"   > 
                                                     <option value="0" <%= product_subcategory.status_id === 0 ? 'selected' : '' %>> Locked  </option> 
                                                     <option value="1" <%= product_subcategory.status_id === 1 ? 'selected' : '' %>> Active </option> 
                                         
