--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -559,29 +559,20 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <table data-tw-merge="" class="w-full text-left border-separate border-spacing-y-[10px]">
                                     <thead>
                                         <tr>
-                                            <th class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-5 shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Image
-                                            </th>
-                                            <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Product Name
+                                            <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                ID
+                                            </th> 
+                                            <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                Product name
                                             </th>
                                             <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
                                                 Price
                                             </th>
                                             <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Quantity
+                                                Sold
                                             </th>
                                             <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Revenue
-                                            </th>
-                                            <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Cost
-                                            </th>
-                                            <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Profit
-                                            </th>
-                                            <th class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                Actions
+                                                Status
                                             </th>
                                         </tr>
                                     </thead>
@@ -590,41 +581,30 @@ License: You must have a valid license purchased only from themeforest(the above
                     
                                
                                         <tr data-tw-merge="" class="intro-x">
-                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-5 shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="flex">
-                                                    <div class="image-fit zoom-in h-10 w-10">
-                                                        <img data-placement="top" title="Uploaded at 24 August 2021" src="<%= product.image %>" alt="Rocketman - Admin Dashboard Template" class="tooltip cursor-pointer rounded-full shadow-[0px_0px_0px_2px_#fff,_1px_1px_5px_rgba(0,0,0,0.32)] dark:shadow-[0px_0px_0px_2px_#3f4865,_1px_1px_5px_rgba(0,0,0,0.32)]">
-                                                    </div>
-                                                    <!-- <div class="image-fit zoom-in -ml-5 h-10 w-10">
-                                                        <img data-placement="top" title="Uploaded at 24 August 2021" src="/admin/images/fakers/preview-13.jpg" alt="Rocketman - Admin Dashboard Template" class="tooltip cursor-pointer rounded-full shadow-[0px_0px_0px_2px_#fff,_1px_1px_5px_rgba(0,0,0,0.32)] dark:shadow-[0px_0px_0px_2px_#3f4865,_1px_1px_5px_rgba(0,0,0,0.32)]">
-                                                    </div>
-                                                    <div class="image-fit zoom-in -ml-5 h-10 w-10">
-                                                        <img data-placement="top" title="Uploaded at 24 August 2021" src="/admin/images/fakers/preview-5.jpg" alt="Rocketman - Admin Dashboard Template" class="tooltip cursor-pointer rounded-full shadow-[0px_0px_0px_2px_#fff,_1px_1px_5px_rgba(0,0,0,0.32)] dark:shadow-[0px_0px_0px_2px_#3f4865,_1px_1px_5px_rgba(0,0,0,0.32)]">
-                                                    </div> -->
-                                                </div>
-                                            </td>
-                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <a class="whitespace-nowrap font-medium" href="#"><%= product.product_name %></a>
-                                                <div class="mt-0.5 whitespace-nowrap text-xs text-slate-500">
-                                                    <%=product.product_category_name%></div>
+                                          
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                <a class="whitespace-nowrap underline decoration-dotted" href="#"><%= product.product_id %></a>
                                             </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                $<%= product.price %>
+                                                $<%= product.product_name %>
                                             </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                              <%= product.quantity %>
+                                              <%= product.price %>
                                             </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <%= Math.round(product.revenue,2) %>
+                                                <%=product.quantity  %>
                                             </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <%= Math.round(product.cost,2) %>
-                                            </td>
-                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                 <%= Math.round(product.profit,2) %>
-                                            </td>
-                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <input data-tw-merge="" type="checkbox" class="transition-all duration-100 ease-in-out shadow-sm border-slate-200 cursor-pointer focus:ring-4 focus:ring-offset-0 focus:ring-primary focus:ring-opacity-20 dark:bg-darkmode-800 dark:border-transparent dark:focus:ring-slate-700 dark:focus:ring-opacity-50 [&[type='radio']]:checked:bg-primary [&[type='radio']]:checked:border-primary [&[type='radio']]:checked:border-opacity-10 [&[type='checkbox']]:checked:bg-primary [&[type='checkbox']]:checked:border-primary [&[type='checkbox']]:checked:border-opacity-10 [&:disabled:not(:checked)]:bg-slate-100 [&:disabled:not(:checked)]:cursor-not-allowed [&:disabled:not(:checked)]:dark:bg-darkmode-800/50 [&:disabled:checked]:opacity-70 [&:disabled:checked]:cursor-not-allowed [&:disabled:checked]:dark:bg-darkmode-800/50 w-[38px] h-[24px] p-px rounded-full relative before:w-[20px] before:h-[20px] before:shadow-[1px_1px_3px_rgba(0,0,0,0.25)] before:transition-[margin-left] before:duration-200 before:ease-in-out before:absolute before:inset-y-0 before:my-auto before:rounded-full before:dark:bg-darkmode-600 checked:bg-primary checked:border-primary checked:bg-none before:checked:ml-[14px] before:checked:bg-white mx-auto">
+                                             
+                                                <form >
+                                                    <!-- action="/admin/order/status" method="post" -->
+                                                    <input type="hidden" name="orderId" value="<% product.product_id %>">
+                                                    <!-- onchange="this.form.submit()" -->
+                                                    <select name="plan" class="status-select"  data-products="<%= product.product_id %>"   > 
+                                                    <option value="0" <%= product.status_id === 0 ? 'selected' : '' %>> Locked  </option> 
+                                                    <option value="1" <%= product.status_id === 1 ? 'selected' : '' %>> Active </option> 
+                                        
+                                                </select></form>
                                             </td>
                                             <td data-tw-merge="" class="px-5 w-56 border border-l-0 border-r-0 border-slate-200 bg-white first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r shadow-[20px_3px_20px_#0000000b] dark:border-darkmode-600 dark:bg-darkmode-600 py-0 relative before:block before:w-px before:h-8 before:bg-slate-200 before:absolute before:left-0 before:inset-y-0 before:my-auto before:dark:bg-darkmode-400">
                                                 <div class="flex items-center justify-center">
@@ -632,10 +612,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         <i data-tw-merge="" data-lucide="check-square" class="stroke-[1] mr-1 h-4 w-4"></i>
                                                         Edit
                                                     </a>
-                                                    <a class="flex items-center text-danger" data-tw-toggle="modal" data-tw-target="#delete-confirmation-modal" href="javascript:;">
-                                                        <i data-tw-merge="" data-lucide="trash-2" class="stroke-[1] mr-1 h-4 w-4"></i>
-                                                        Delete
-                                                    </a>
+                                                  
                                                 </div>
                                             </td>
                                         </tr>
