--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="/admin/css/themes/lucent.css">
         <link rel="stylesheet" href="/admin/css/app.css"> <!-- END: CSS Assets-->
     </head>
+    <div class="alert-update-status alert alert-primary" role="alert">
+        Status updated successfully!
+    </div>
     <%- body %>
          
           
